--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -686,31 +686,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexingError",
-     "evalue": "Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexingError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#criancas_cherbourg.loc[criancas_cherbourg['embarque'] == 'Cherbourg'and criancas_cherbourg['idade'] < 12]\u001b[39;00m\n\u001b[1;32m      2\u001b[0m criancas_cherbourg \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m----> 3\u001b[0m criancas_cherbourg\u001b[39m.\u001b[39;49mloc[(criancas_cherbourg[\u001b[39m'\u001b[39;49m\u001b[39membarque\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mCherbourg\u001b[39;49m\u001b[39m'\u001b[39;49m) , (criancas_cherbourg[\u001b[39m'\u001b[39;49m\u001b[39midade\u001b[39;49m\u001b[39m'\u001b[39;49m]) \u001b[39m<\u001b[39;49m \u001b[39m12\u001b[39;49m]\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:1067\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1065\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_scalar_access(key):\n\u001b[1;32m   1066\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_value(\u001b[39m*\u001b[39mkey, takeable\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_takeable)\n\u001b[0;32m-> 1067\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_tuple(key)\n\u001b[1;32m   1068\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1069\u001b[0m     \u001b[39m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[1;32m   1070\u001b[0m     axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:1256\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_tuple\u001b[0;34m(self, tup)\u001b[0m\n\u001b[1;32m   1253\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multi_take_opportunity(tup):\n\u001b[1;32m   1254\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multi_take(tup)\n\u001b[0;32m-> 1256\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_tuple_same_dim(tup)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:924\u001b[0m, in \u001b[0;36m_LocationIndexer._getitem_tuple_same_dim\u001b[0;34m(self, tup)\u001b[0m\n\u001b[1;32m    921\u001b[0m \u001b[39mif\u001b[39;00m com\u001b[39m.\u001b[39mis_null_slice(key):\n\u001b[1;32m    922\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m--> 924\u001b[0m retval \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39;49m(retval, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\u001b[39m.\u001b[39;49m_getitem_axis(key, axis\u001b[39m=\u001b[39;49mi)\n\u001b[1;32m    925\u001b[0m \u001b[39m# We should never have retval.ndim < self.ndim, as that should\u001b[39;00m\n\u001b[1;32m    926\u001b[0m \u001b[39m#  be handled by the _getitem_lowerdim call above.\u001b[39;00m\n\u001b[1;32m    927\u001b[0m \u001b[39massert\u001b[39;00m retval\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mndim\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:1292\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1290\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_slice_axis(key, axis\u001b[39m=\u001b[39maxis)\n\u001b[1;32m   1291\u001b[0m \u001b[39melif\u001b[39;00m com\u001b[39m.\u001b[39mis_bool_indexer(key):\n\u001b[0;32m-> 1292\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getbool_axis(key, axis\u001b[39m=\u001b[39;49maxis)\n\u001b[1;32m   1293\u001b[0m \u001b[39melif\u001b[39;00m is_list_like_indexer(key):\n\u001b[1;32m   1294\u001b[0m \n\u001b[1;32m   1295\u001b[0m     \u001b[39m# an iterable multi-selection\u001b[39;00m\n\u001b[1;32m   1296\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39misinstance\u001b[39m(key, \u001b[39mtuple\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(labels, MultiIndex)):\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:1091\u001b[0m, in \u001b[0;36m_LocationIndexer._getbool_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1087\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[1;32m   1088\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_getbool_axis\u001b[39m(\u001b[39mself\u001b[39m, key, axis: \u001b[39mint\u001b[39m):\n\u001b[1;32m   1089\u001b[0m     \u001b[39m# caller is responsible for ensuring non-None axis\u001b[39;00m\n\u001b[1;32m   1090\u001b[0m     labels \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis(axis)\n\u001b[0;32m-> 1091\u001b[0m     key \u001b[39m=\u001b[39m check_bool_indexer(labels, key)\n\u001b[1;32m   1092\u001b[0m     inds \u001b[39m=\u001b[39m key\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]\n\u001b[1;32m   1093\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_take_with_is_copy(inds, axis\u001b[39m=\u001b[39maxis)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexing.py:2552\u001b[0m, in \u001b[0;36mcheck_bool_indexer\u001b[0;34m(index, key)\u001b[0m\n\u001b[1;32m   2550\u001b[0m indexer \u001b[39m=\u001b[39m result\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mget_indexer_for(index)\n\u001b[1;32m   2551\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m \u001b[39min\u001b[39;00m indexer:\n\u001b[0;32m-> 2552\u001b[0m     \u001b[39mraise\u001b[39;00m IndexingError(\n\u001b[1;32m   2553\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUnalignable boolean Series provided as \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2554\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mindexer (index of the boolean Series and of \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2555\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mthe indexed object do not match).\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2556\u001b[0m     )\n\u001b[1;32m   2558\u001b[0m result \u001b[39m=\u001b[39m result\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   2560\u001b[0m \u001b[39m# fall through for boolean\u001b[39;00m\n",
-      "\u001b[0;31mIndexingError\u001b[0m: Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match)."
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_passageiro</th>\n",
+       "      <th>sobreviveu</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>irmaos_conjuge</th>\n",
+       "      <th>pais_criancas</th>\n",
+       "      <th>passagem</th>\n",
+       "      <th>tarifa</th>\n",
+       "      <th>cabine</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Palsson, Master. Gosta Leonard</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>349909</td>\n",
+       "      <td>21075.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PP 9549</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>G6</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Rice, Master. Eugene</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>382652</td>\n",
+       "      <td>29125.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Queenstow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Palsson, Miss. Torborg Danira</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>349909</td>\n",
+       "      <td>21075.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>44</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Laroche, Miss. Simonne Marie Anne Andree</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>SC/Paris 2123</td>\n",
+       "      <td>41.5792</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>827</th>\n",
+       "      <td>828</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mallet, Master. Andre</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>S.C./PARIS 2079</td>\n",
+       "      <td>37.0042</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>831</th>\n",
+       "      <td>832</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Richards, Master. George Sibley</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29106</td>\n",
+       "      <td>18.7500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>851</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Andersson, Master. Sigvard Harald Elias</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>347082</td>\n",
+       "      <td>31275.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>853</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Boulos, Miss. Nourelain</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2678</td>\n",
+       "      <td>15.2458</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>870</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnson, Master. Harold Theodor</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>347742</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>68 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id_passageiro sobreviveu  classe  \\\n",
+       "7                8        nao       3   \n",
+       "10              11        sim       3   \n",
+       "16              17        nao       3   \n",
+       "24              25        nao       3   \n",
+       "43              44        sim       2   \n",
+       "..             ...        ...     ...   \n",
+       "827            828        sim       2   \n",
+       "831            832        sim       2   \n",
+       "850            851        nao       3   \n",
+       "852            853        nao       3   \n",
+       "869            870        sim       3   \n",
+       "\n",
+       "                                         nome       sexo  idade  \\\n",
+       "7              Palsson, Master. Gosta Leonard  masculino   2.00   \n",
+       "10            Sandstrom, Miss. Marguerite Rut   feminino   4.00   \n",
+       "16                       Rice, Master. Eugene  masculino   2.00   \n",
+       "24              Palsson, Miss. Torborg Danira   feminino   8.00   \n",
+       "43   Laroche, Miss. Simonne Marie Anne Andree   feminino   3.00   \n",
+       "..                                        ...        ...    ...   \n",
+       "827                     Mallet, Master. Andre  masculino   1.00   \n",
+       "831           Richards, Master. George Sibley  masculino   0.83   \n",
+       "850   Andersson, Master. Sigvard Harald Elias  masculino   4.00   \n",
+       "852                   Boulos, Miss. Nourelain   feminino   9.00   \n",
+       "869           Johnson, Master. Harold Theodor  masculino   4.00   \n",
+       "\n",
+       "     irmaos_conjuge  pais_criancas         passagem      tarifa cabine  \\\n",
+       "7                 3              1           349909  21075.0000    NaN   \n",
+       "10                1              1          PP 9549     16.7000     G6   \n",
+       "16                4              1           382652  29125.0000    NaN   \n",
+       "24                3              1           349909  21075.0000    NaN   \n",
+       "43                1              2    SC/Paris 2123     41.5792    NaN   \n",
+       "..              ...            ...              ...         ...    ...   \n",
+       "827               0              2  S.C./PARIS 2079     37.0042    NaN   \n",
+       "831               1              1            29106     18.7500    NaN   \n",
+       "850               4              2           347082  31275.0000    NaN   \n",
+       "852               1              1             2678     15.2458    NaN   \n",
+       "869               1              1           347742     11.1333    NaN   \n",
+       "\n",
+       "        embarque  \n",
+       "7    Southampton  \n",
+       "10   Southampton  \n",
+       "16     Queenstow  \n",
+       "24   Southampton  \n",
+       "43     Cherbourg  \n",
+       "..           ...  \n",
+       "827    Cherbourg  \n",
+       "831  Southampton  \n",
+       "850  Southampton  \n",
+       "852    Cherbourg  \n",
+       "869  Southampton  \n",
+       "\n",
+       "[68 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#criancas_cherbourg.loc[criancas_cherbourg['embarque'] == 'Cherbourg'and criancas_cherbourg['idade'] < 12]\n",
     "criancas_cherbourg = df.copy()\n",
-    "criancas_cherbourg.loc[(criancas_cherbourg['embarque'] == 'Cherbourg') , (criancas_cherbourg['idade']) < 12]"
+    "criancas_cherbourg.loc[(criancas_cherbourg['idade'] < 12)] #(criancas_cherbourg['embarque'] == 'Cherbourg') and (criancas_cherbourg['idade'] < 12)]"
    ]
   }
  ],
