--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -1866,7 +1866,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Com base na tabela acima, a classe que mais sobreviveu foi a classe 1"
+    "# Com base na tabela acima e na coluna id_passageiro, a classe que mais sobreviveu foi a classe 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>id_passageiro</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>irmaos_conjuge</th>\n",
+       "      <th>pais_criancas</th>\n",
+       "      <th>passagem</th>\n",
+       "      <th>tarifa</th>\n",
+       "      <th>cabine</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sobreviveu</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">nao</th>\n",
+       "      <th>feminino</th>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>64</td>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>6</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>masculino</th>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>360</td>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>62</td>\n",
+       "      <td>468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">sim</th>\n",
+       "      <th>feminino</th>\n",
+       "      <td>233</td>\n",
+       "      <td>233</td>\n",
+       "      <td>233</td>\n",
+       "      <td>197</td>\n",
+       "      <td>233</td>\n",
+       "      <td>233</td>\n",
+       "      <td>233</td>\n",
+       "      <td>233</td>\n",
+       "      <td>91</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>masculino</th>\n",
+       "      <td>109</td>\n",
+       "      <td>109</td>\n",
+       "      <td>109</td>\n",
+       "      <td>93</td>\n",
+       "      <td>109</td>\n",
+       "      <td>109</td>\n",
+       "      <td>109</td>\n",
+       "      <td>109</td>\n",
+       "      <td>45</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      id_passageiro  classe  nome  idade  irmaos_conjuge  \\\n",
+       "sobreviveu sexo                                                            \n",
+       "nao        feminino              81      81    81     64              81   \n",
+       "           masculino            468     468   468    360             468   \n",
+       "sim        feminino             233     233   233    197             233   \n",
+       "           masculino            109     109   109     93             109   \n",
+       "\n",
+       "                      pais_criancas  passagem  tarifa  cabine  embarque  \n",
+       "sobreviveu sexo                                                          \n",
+       "nao        feminino              81        81      81       6        81  \n",
+       "           masculino            468       468     468      62       468  \n",
+       "sim        feminino             233       233     233      91       231  \n",
+       "           masculino            109       109     109      45       109  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# exercício 12 - Agrupe pelo sexo e pela coluna sobreviveu e conte a quantidade de pessoas que sobreviveram de acordo com o sexo. \n",
+    "# Quem sobreviveu mais? Homens ou mulheres?\n",
+    "df.groupby(['sobreviveu', 'sexo']).agg('count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Com base na tabela acima e na coluna id_passageiro, mais Mulheres sobreviveram"
    ]
   }
  ],
